# codex-summarize-session

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  RELEASE_PLAN.md  ROADMAP.md  pyproject.toml
codex_summarize_session/: browser.py  cli.py  messages.py
codex_summarize_session/summaries/: __init__.py  openrouter_client.py  prompts.py  service.py  storage.py  types.py
codex_summarize_session/summaries/prompts/: default.md
docs/: openrouter-analysis.md  session-summaries.md
